fixed the alignment of the teas at last, now to the locations

--- a/style.css
+++ b/style.css
@@ -73,23 +73,32 @@ a {
 	flex-wrap: wrap;
 }
 
-.tea {
-	display: inline-block;
+.tea-list {
+	display: flex;
+	justify-content: center;
 	flex-wrap: wrap;
 }
 
 .tea img {
+	padding: 5px;
 	width: 300px;
 	height: 200px;
-	margin: 0px 10px;
 }
 
 .Locations {
 	background-image: url("./locations-background.jpg");
+	background-position: center;
 	margin: auto;
 	flex-wrap: wrap;
-	width: 1200px;
+	padding: 40px 0px;
 	height: 500px;
+}
+
+.location-list {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 1200px;
 }
 
 .location-data {
